--- a/master.css
+++ b/master.css
@@ -1,3 +1,4 @@
+/* definizioni generali */
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,8 @@ main {
   margin: 0 15%;
 }
 
+
+/* definizioni paragrafo */
 .container div p {
   text-align: center;
   position: relative;
@@ -18,9 +21,6 @@ main {
 .padding {
   padding: 5px;
   height: auto;
-}
-[class*="col-"] {
-  background-color: #FFC0CB;
 }
 
 .color {
